--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@livekit/components-core": "^0.11.10",
+    "@livekit/components-react": "^2.6.7",
+    "@livekit/components-styles": "^1.1.4",
+    "livekit-client": "^2.6.0",
+    "livekit-server-sdk": "^2.8.1",
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "typescript": "^5",
